identify geog code and name fields for data

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "499  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/ICB_JUL_2022_EN_BUC_V3/FeatureServer  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,17 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ICB_JUL_2022_EN_BUC_V3.csv successfully saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save_geojson_from_dataset_name(icb_shape_directory['name'].values[0])"
    ]
@@ -287,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +338,7 @@
        "1688  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/FeatureServer  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,17 +349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC.csv successfully saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save_geojson_from_dataset_name(sub_icb_shape_directory['name'].values[0])"
    ]
@@ -382,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +483,7 @@
        "61                                              https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/CCG_July_2015_UGCB_in_England_2022/FeatureServer  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,23 +494,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv successfully saved\n",
-      "Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv successfully saved\n",
-      "Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv successfully saved\n",
-      "CCG_Apr_2016_UGCB_in_England_2022.csv successfully saved\n",
-      "CCG_Apr_2017_UGCB_in_England_V4_2022.csv successfully saved\n",
-      "CCG_Apr_2018_UGCB_in_England_2022.csv successfully saved\n",
-      "CCG_July_2015_UGCB_in_England_2022.csv successfully saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for i in ccg_shape_directory['name']:\n",
     "#     # print(i)\n",
@@ -543,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -604,10 +574,16 @@
        "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2021_UK_BUC_2022/FeatureServer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3134</th>\n",
+       "      <th>3133</th>\n",
        "      <td>Local_Authority_Districts_May_2023_UK_BUC</td>\n",
        "      <td>FeatureServer</td>\n",
        "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2023_UK_BUC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>LAD_December_2018_Boundaries_UK_BUC_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/LAD_December_2018_Boundaries_UK_BUC_2022/FeatureServer</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -620,7 +596,8 @@
        "799         Local_Authority_Districts_December_2021_UK_BUC_2022   \n",
        "802   Local_Authority_Districts_December_2022_Boundaries_UK_BUC   \n",
        "806              Local_Authority_Districts_May_2021_UK_BUC_2022   \n",
-       "3134                  Local_Authority_Districts_May_2023_UK_BUC   \n",
+       "3133                  Local_Authority_Districts_May_2023_UK_BUC   \n",
+       "599                    LAD_December_2018_Boundaries_UK_BUC_2022   \n",
        "\n",
        "               type  \\\n",
        "763   FeatureServer   \n",
@@ -628,7 +605,8 @@
        "799   FeatureServer   \n",
        "802   FeatureServer   \n",
        "806   FeatureServer   \n",
-       "3134  FeatureServer   \n",
+       "3133  FeatureServer   \n",
+       "599   FeatureServer   \n",
        "\n",
        "                                                                                                                                             url  \n",
        "763            https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_April_2019_UK_BUC_2022/FeatureServer  \n",
@@ -636,16 +614,18 @@
        "799         https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_December_2021_UK_BUC_2022/FeatureServer  \n",
        "802   https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_December_2022_Boundaries_UK_BUC/FeatureServer  \n",
        "806              https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2021_UK_BUC_2022/FeatureServer  \n",
-       "3134                  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2023_UK_BUC/FeatureServer  "
+       "3133                  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2023_UK_BUC/FeatureServer  \n",
+       "599                    https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/LAD_December_2018_Boundaries_UK_BUC_2022/FeatureServer  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ltla_shape_directory = pd.concat([shape_name_contains('local_authority_districts', 'uk_buc') # 2016 to 2022\n",
+    "ltla_shape_directory = pd.concat([shape_name_contains('local_authority_districts', 'uk_buc'), # 2019 to 2023\n",
+    "                                  shape_name_contains('lad', '2018_Boundaries_UK_BUC')\n",
     "])\n",
     "\n",
     "ltla_shape_directory\n",
@@ -656,22 +636,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local_Authority_Districts_April_2019_UK_BUC_2022.csv successfully saved\n",
-      "Local_Authority_Districts_December_2020_UK_BUC_2022.csv successfully saved\n",
-      "Local_Authority_Districts_December_2021_UK_BUC_2022.csv successfully saved\n",
-      "Local_Authority_Districts_December_2022_Boundaries_UK_BUC.csv successfully saved\n",
-      "Local_Authority_Districts_May_2021_UK_BUC_2022.csv successfully saved\n",
-      "Local_Authority_Districts_May_2023_UK_BUC.csv successfully saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for i in ltla_shape_directory['name']:\n",
     "#     # print(i)\n",
@@ -688,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +764,7 @@
        "227               https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2022_EN_BUC/FeatureServer  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,22 +775,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv successfully saved\n",
-      "Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv successfully saved\n",
-      "Counties_and_Unitary_Authorities_December_2018_GCB_EW_2022.csv successfully saved\n",
-      "Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv successfully saved\n",
-      "Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv successfully saved\n",
-      "Counties_and_Unitary_Authorities_December_2022_EN_BUC.csv successfully saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for i in utla_shape_directory['name']:\n",
     "#     # print(i)\n",
@@ -840,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +842,7 @@
        "1582  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Regions_December_2022_EN_BUC/FeatureServer  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,17 +856,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Regions_December_2022_EN_BUC.csv successfully saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save_geojson_from_dataset_name(region_shape_directory['name'].values[0])"
    ]
@@ -927,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +971,7 @@
        "1675                                          https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/STP_Feb_2017_GCB_in_England_2022/FeatureServer  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,24 +982,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in stp_shape_directory['name']:\n",
+    "#     save_geojson_from_dataset_name(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# append files together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files_required = pd.read_csv('https://docs.google.com/spreadsheets/u/0/d/15RhWWsHPPMLWoxR5sJcpK-vraRkidRY8jsAb_Y_5GwI/gviz/tq?tqx=out:csv&tq&gid=963757659&headers=1')\n",
+    "files_required = files_required.loc[:, ['shape_file']].dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def code_and_name_fields(folder_name):\n",
+    "    data_appended = pd.DataFrame(columns=['shape_file', 'code_field', 'name_field'])\n",
+    "    \n",
+    "    for i in files_required.values:\n",
+    "        filename = i[0]\n",
+    "        filepath = folder_name + '/' + filename\n",
+    "        data = pd.read_csv(filepath)\n",
+    "        \n",
+    "        to_append_list = [filename, data.filter(regex='CD|cd').columns[0], data.filter(regex='NM|nm').columns[0]]\n",
+    "        \n",
+    "        print(to_append_list)\n",
+    "        # data_appended = pd.concat([data_appended, to_append])\n",
+    "        \n",
+    "    # return data_appended\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sustainability_and_Transformation_Partnerships_April_2018_EN_BUC_2022.csv successfully saved\n",
-      "Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv successfully saved\n",
-      "STP_Apr_2019_GCB_in_England_2022.csv successfully saved\n",
-      "STP_Apr_2020_GCB_in_England_2022.csv successfully saved\n",
-      "STP_Feb_2017_GCB_in_England_2022.csv successfully saved\n"
+      "['ICB_JUL_2022_EN_BUC_V3.csv', 'properties.ICB22CD', 'properties.ICB22NM']\n",
+      "['Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv', 'properties.STP21CD', 'properties.STP21NM']\n",
+      "['STP_Feb_2017_GCB_in_England_2022.csv', 'properties.stp17cd', 'properties.stp17nm']\n",
+      "['Regions_December_2022_EN_BUC.csv', 'properties.RGN22CD', 'properties.RGN22NM']\n",
+      "['Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC.csv', 'properties.SICBL23CD', 'properties.SICBL23NM']\n",
+      "['Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv', 'properties.CCG21CD', 'properties.CCG21NM']\n",
+      "['Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv', 'properties.ccg20cd', 'properties.ccg20nm']\n",
+      "['Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv', 'properties.CCG19CD', 'properties.CCG19NM']\n",
+      "['CCG_Apr_2018_UGCB_in_England_2022.csv', 'properties.ccg18cd', 'properties.ccg18nm']\n",
+      "['CCG_Apr_2017_UGCB_in_England_V4_2022.csv', 'properties.ccg17cd', 'properties.ccg17nm']\n",
+      "['Local_Authority_Districts_December_2021_UK_BUC_2022.csv', 'properties.LAD21CD', 'properties.LAD21NM']\n",
+      "['Local_Authority_Districts_December_2020_UK_BUC_2022.csv', 'properties.LAD20CD', 'properties.LAD20NM']\n",
+      "['Local_Authority_Districts_April_2019_UK_BUC_2022.csv', 'properties.LAD19CD', 'properties.LAD19NM']\n",
+      "['LAD_December_2018_Boundaries_UK_BUC_2022.csv', 'properties.lad18cd', 'properties.lad18nm']\n",
+      "['Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv', 'properties.CTYUA21CD', 'properties.CTYUA21NM']\n",
+      "['Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv', 'properties.CTYUA20CD', 'properties.CTYUA20NM']\n",
+      "['Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv', 'properties.CTYUA19CD', 'properties.CTYUA19NM']\n",
+      "['Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv', 'properties.CTYUA17CD', 'properties.CTYUA17NM']\n"
      ]
     }
    ],
    "source": [
-    "# for i in stp_shape_directory['name']:\n",
-    "#     save_geojson_from_dataset_name(i)"
+    "data = code_and_name_fields('shapes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shape_file</th>\n",
+       "      <th>code_field</th>\n",
+       "      <th>name_field</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [shape_file, code_field, name_field]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
