save geography code and name fields

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "499  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/ICB_JUL_2022_EN_BUC_V3/FeatureServer  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "1688  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/FeatureServer  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "61                                              https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/CCG_July_2015_UGCB_in_England_2022/FeatureServer  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2021_UK_BUC_2022/FeatureServer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3133</th>\n",
+       "      <th>3132</th>\n",
        "      <td>Local_Authority_Districts_May_2023_UK_BUC</td>\n",
        "      <td>FeatureServer</td>\n",
        "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2023_UK_BUC/FeatureServer</td>\n",
@@ -596,7 +596,7 @@
        "799         Local_Authority_Districts_December_2021_UK_BUC_2022   \n",
        "802   Local_Authority_Districts_December_2022_Boundaries_UK_BUC   \n",
        "806              Local_Authority_Districts_May_2021_UK_BUC_2022   \n",
-       "3133                  Local_Authority_Districts_May_2023_UK_BUC   \n",
+       "3132                  Local_Authority_Districts_May_2023_UK_BUC   \n",
        "599                    LAD_December_2018_Boundaries_UK_BUC_2022   \n",
        "\n",
        "               type  \\\n",
@@ -605,7 +605,7 @@
        "799   FeatureServer   \n",
        "802   FeatureServer   \n",
        "806   FeatureServer   \n",
-       "3133  FeatureServer   \n",
+       "3132  FeatureServer   \n",
        "599   FeatureServer   \n",
        "\n",
        "                                                                                                                                             url  \n",
@@ -614,11 +614,11 @@
        "799         https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_December_2021_UK_BUC_2022/FeatureServer  \n",
        "802   https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_December_2022_Boundaries_UK_BUC/FeatureServer  \n",
        "806              https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2021_UK_BUC_2022/FeatureServer  \n",
-       "3133                  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2023_UK_BUC/FeatureServer  \n",
+       "3132                  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Local_Authority_Districts_May_2023_UK_BUC/FeatureServer  \n",
        "599                    https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/LAD_December_2018_Boundaries_UK_BUC_2022/FeatureServer  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "227               https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2022_EN_BUC/FeatureServer  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "1582  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Regions_December_2022_EN_BUC/FeatureServer  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
        "1675                                          https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/STP_Feb_2017_GCB_in_England_2022/FeatureServer  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,12 +1010,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def code_and_name_fields(folder_name):\n",
-    "    data_appended = pd.DataFrame(columns=['shape_file', 'code_field', 'name_field'])\n",
+    "    final_list=[]\n",
     "    \n",
     "    for i in files_required.values:\n",
     "        filename = i[0]\n",
@@ -1024,95 +1024,30 @@
     "        \n",
     "        to_append_list = [filename, data.filter(regex='CD|cd').columns[0], data.filter(regex='NM|nm').columns[0]]\n",
     "        \n",
-    "        print(to_append_list)\n",
-    "        # data_appended = pd.concat([data_appended, to_append])\n",
+    "        final_list += [to_append_list]\n",
+    "        final_df = pd.DataFrame(final_list, columns=['shape_file', 'code_field', 'name_field'])\n",
     "        \n",
-    "    # return data_appended\n"
+    "    return final_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ICB_JUL_2022_EN_BUC_V3.csv', 'properties.ICB22CD', 'properties.ICB22NM']\n",
-      "['Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv', 'properties.STP21CD', 'properties.STP21NM']\n",
-      "['STP_Feb_2017_GCB_in_England_2022.csv', 'properties.stp17cd', 'properties.stp17nm']\n",
-      "['Regions_December_2022_EN_BUC.csv', 'properties.RGN22CD', 'properties.RGN22NM']\n",
-      "['Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC.csv', 'properties.SICBL23CD', 'properties.SICBL23NM']\n",
-      "['Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv', 'properties.CCG21CD', 'properties.CCG21NM']\n",
-      "['Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv', 'properties.ccg20cd', 'properties.ccg20nm']\n",
-      "['Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv', 'properties.CCG19CD', 'properties.CCG19NM']\n",
-      "['CCG_Apr_2018_UGCB_in_England_2022.csv', 'properties.ccg18cd', 'properties.ccg18nm']\n",
-      "['CCG_Apr_2017_UGCB_in_England_V4_2022.csv', 'properties.ccg17cd', 'properties.ccg17nm']\n",
-      "['Local_Authority_Districts_December_2021_UK_BUC_2022.csv', 'properties.LAD21CD', 'properties.LAD21NM']\n",
-      "['Local_Authority_Districts_December_2020_UK_BUC_2022.csv', 'properties.LAD20CD', 'properties.LAD20NM']\n",
-      "['Local_Authority_Districts_April_2019_UK_BUC_2022.csv', 'properties.LAD19CD', 'properties.LAD19NM']\n",
-      "['LAD_December_2018_Boundaries_UK_BUC_2022.csv', 'properties.lad18cd', 'properties.lad18nm']\n",
-      "['Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv', 'properties.CTYUA21CD', 'properties.CTYUA21NM']\n",
-      "['Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv', 'properties.CTYUA20CD', 'properties.CTYUA20NM']\n",
-      "['Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv', 'properties.CTYUA19CD', 'properties.CTYUA19NM']\n",
-      "['Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv', 'properties.CTYUA17CD', 'properties.CTYUA17NM']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = code_and_name_fields('shapes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>shape_file</th>\n",
-       "      <th>code_field</th>\n",
-       "      <th>name_field</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [shape_file, code_field, name_field]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "data = code_and_name_fields('shapes')\n",
+    "# data.to_csv('2023-05-19_shape_code_and_name_fields.csv', index=False)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('2023-05-19_shape_code_and_name_fields.csv')"
    ]
   },
   {
