include some code to clean existing csv

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -540,6 +540,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# do some rough cleaning to existing file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "shape = pd.read_csv('shapes/2023-05-19_shapes_appended.csv')\n",
+    "cols = ['geometry.coordinates', 'area_code', 'area_type_id']\n",
+    "cols_dict = {'geometry.coordinates': 'shape'}\n",
+    "\n",
+    "shape = shape.loc[:,cols].rename(columns=cols_dict)\n",
+    "\n",
+    "shape.to_csv('2023-05-19_shapes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shape</th>\n",
+       "      <th>area_code</th>\n",
+       "      <th>area_type_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[[[-2.9671418349254, 53.6984478763779], [-2.97...</td>\n",
+       "      <td>E54000008_221</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[[[-1.83206903707898, 53.1728276266488], [-1.8...</td>\n",
+       "      <td>E54000010_221</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[[[-2.37893812427525, 52.891720395622], [-2.39...</td>\n",
+       "      <td>E54000011_221</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[[[-0.292115057436606, 53.6132674113174], [-0....</td>\n",
+       "      <td>E54000013_221</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[[[-0.778437532605699, 52.9593137819633], [-0....</td>\n",
+       "      <td>E54000015_221</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               shape      area_code  \\\n",
+       "0  [[[-2.9671418349254, 53.6984478763779], [-2.97...  E54000008_221   \n",
+       "1  [[[-1.83206903707898, 53.1728276266488], [-1.8...  E54000010_221   \n",
+       "2  [[[-2.37893812427525, 52.891720395622], [-2.39...  E54000011_221   \n",
+       "3  [[[-0.292115057436606, 53.6132674113174], [-0....  E54000013_221   \n",
+       "4  [[[-0.778437532605699, 52.9593137819633], [-0....  E54000015_221   \n",
+       "\n",
+       "   area_type_id  \n",
+       "0           221  \n",
+       "1           221  \n",
+       "2           221  \n",
+       "3           221  \n",
+       "4           221  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shape.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
