include profile data extractor

--- a/phe_fingertips_exploratory.ipynb
+++ b/phe_fingertips_exploratory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,6 +902,64 @@
     "indicator_name = indicators_with_same_name['Indicator'].iloc[0]\n",
     "indicator_metadata[indicator_metadata['Indicator']==indicator_name]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# get profile data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "profile = pd.read_csv('https://fingertips.phe.org.uk/api/profiles')\n",
+    "profile = pd.read_json('https://fingertips.phe.org.uk/api/profiles')\n",
+    "# 'perinatal-mental-health', 102"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perinatal = pd.read_json('https://fingertips.phe.org.uk/api/indicator_metadata/by_profile_id?profile_id=102')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([  848, 20401, 90412, 90581, 90886, 90907, 92196, 92257, 92258,\n",
+       "            92259, 92260, 92261, 92262, 92263, 92264, 92266, 92270, 92272,\n",
+       "            92275, 92276, 92277, 92278, 92279, 92280, 92281, 92332, 92334,\n",
+       "            92339, 92340, 92351, 92352, 92353, 92354, 92374, 92530, 92863,\n",
+       "            92865, 92866, 92867, 92946, 92956, 92957, 93469, 93470, 93471],\n",
+       "           dtype='int64')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perinatal.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
